feat: add dark mode

--- a/src/lib/lightMode.css
+++ b/src/lib/lightMode.css
@@ -23,6 +23,12 @@
 }
 
 .segmented-control-item {
+	cursor: pointer;
+	font: inherit;
+	line-height: inherit;
+	overflow: visible;
+	vertical-align:inherit;
+
   position: relative;
   box-sizing: border-box;
   width: 75px;
@@ -42,8 +48,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
   
+  color: rgb(0, 0, 0);
   transition: color 275ms;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: transparent;
   outline: none;
   cursor: pointer;
 }
@@ -57,3 +64,18 @@
   color: rgb(145, 145, 150);
   pointer-events: none;
 }
+
+/* .segmented-control-item:focus {
+	outline: 4px solid rgba(0, 125, 250, 0.6);
+	outline-offset: 1px
+}
+
+.segmented-control-item:focus[data-focus-method="mouse"], 
+.segmented-control-item:focus[data-focus-method="touch"] {
+	outline:none
+}
+
+.segmented-control-item::-moz-focus-inner {
+	border: 0;
+	padding: 0;
+} */
