--- a/src/lib/lightMode.css
+++ b/src/lib/lightMode.css
@@ -19,11 +19,10 @@
   padding: 0;
   border-radius: 14px;
   background-color: rgb(255, 255, 255);
-  transition: 300ms;
+  transition: width 300ms, transform 300ms;
 }
 
 .segmented-control-item {
-	cursor: pointer;
 	font: inherit;
 	line-height: inherit;
 	overflow: visible;
@@ -57,25 +56,10 @@
 
 .segmented-control-item.selected {
   color: rgb(0, 125, 255);
-  pointer-events: none;
+  cursor: default;
 }
 
 .segmented-control-item.disabled {
   color: rgb(145, 145, 150);
-  pointer-events: none;
+  cursor: default;
 }
-
-/* .segmented-control-item:focus {
-	outline: 4px solid rgba(0, 125, 250, 0.6);
-	outline-offset: 1px
-}
-
-.segmented-control-item:focus[data-focus-method="mouse"], 
-.segmented-control-item:focus[data-focus-method="touch"] {
-	outline:none
-}
-
-.segmented-control-item::-moz-focus-inner {
-	border: 0;
-	padding: 0;
-} */
