--- a/src/lib/lightMode.css
+++ b/src/lib/lightMode.css
@@ -7,6 +7,7 @@
   padding: 2px;
   border-radius: 14px;
   background-color: rgb(235, 235, 235);
+  z-index: 1;
 }
 
 .segmented-control-background {
